# alarm_clock

./: README.md  extra.py  model.py  requirements.txt  simple_bot.py
android/AlarmClock/: settings.gradle.kts
android/AlarmClock/app/: build.gradle.kts
android/AlarmClock/app/src/androidTest/java/com/mondegrin/alarmclock/: ExampleInstrumentedTest.kt
android/AlarmClock/app/src/main/: AndroidManifest.xml
android/AlarmClock/app/src/main/java/com/mondegrin/alarmclock/: ConfigureDeviceActivity.kt  ConfigureServerActivity.kt  DeviceActivity.kt  MainActivity.kt  PermissionsActivity.kt
android/AlarmClock/app/src/main/res/values/: strings.xml
android/AlarmClock/app/src/main/res/xml/: activity_server.xml
android/AlarmClock/app/src/test/java/com/mondegrin/alarmclock/: ExampleUnitTest.kt
android/AlarmClock/gradle/: libs.versions.toml
android/AlarmClock/gradle/wrapper/: gradle-wrapper.properties
backend/: .env  .gitignore  Dockerfile  README_CV  README_CV.md  cam-demo.py  cam-test.py  docker-compose.yaml  esp-connection-test.py  estimator.py  extra.py  model.py  pyproject.toml  requirements.txt  server.py  server_test.py  обкат через вебку.py
backend/CV/: estimator.py  extra.py  model.py
docs/: alarm_clock.docx  alarm_clock.pptx
esp32/alarm_clock/: .gitignore  README.md  sdkconfig
esp32/alarm_clock/main/: CMakeLists.txt  bluetooth.hpp  camera.hpp  channels.hpp  http.hpp  logic.hpp  main.cpp  music.hpp  sntp.hpp  storage.hpp  wifi.hpp
music_converter/: main.py  pirates.mid  pyproject.toml
(+3 files in other folders)
